tests/typing/faulty_assignment_b.sy
start :: fn do
    b :: "abc"
    b = "abc"
end
// error: $Mismatch { .. }
